# Achain2.0

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  act_build.sh  act_install.sh  act_uninstall.sh  actx_build.sh  actx_install.sh  actx_uninstall.sh  testnet.md  testnet.template
CMakeModules/: EosioTester.cmake.in  EosioTesterBuild.cmake.in  act-config.cmake.in  actx-config.cmake.in  doxygen.cmake  package.cmake
Docker/: Dockerfile  README.md  config.ini  docker-compose-dev.yml  docker-compose.yml  genesis.json  nodeosd.sh
contracts/: CMakeLists.txt
contracts/actx.system_v2/: CMakeLists.txt  README.md
contracts/actx.system_v2/include/actx.system/: actx.system.hpp  exchange_state.hpp  native.hpp
contracts/actx.system_v2/src/: actx.system.cpp  delegate_bandwidth.cpp  exchange_state.cpp  producer_pay.cpp  voting.cpp
scripts/: .build_vars  .environment  act_build.sh  actx_build_amazon.sh  eosio_build.sh  eosio_install.sh  eosio_uninstall.sh  generate_rpm.sh  generate_tarball.sh
tests/: CMakeLists.txt  Cluster.py  Node.py  chain_plugin_tests.cpp  cliTest.py  consensus-validation-malicious-producers.py  core_symbol.py  get_table_tests.cpp  nodeos_run_test.py  nodeos_under_min_avail_ram.py  p2p_network_test.py  p2p_stress.py  testUtils.py  wallet_tests.cpp
unittests/: CMakeLists.txt  abi_tests.cpp  api_tests.cpp  auth_tests.cpp  block_tests.cpp  block_timestamp_tests.cpp  bootseq_tests.cpp  contracts.hpp.in  currency_tests.cpp  database_tests.cpp  delay_tests.cpp  eosio.sudo_tests.cpp  eosio.system_tests.cpp  eosio.token_tests.cpp  forked_tests.cpp  (+15 more)
(+235 files in other folders)
